color contrast fixes

--- a/foods/styles/small.css
+++ b/foods/styles/small.css
@@ -131,6 +131,7 @@ h1 {
     margin: 2px;
     text-align: center;
     text-shadow: 2px 2px 2px rgb(136, 214, 136);
+    color: #081b38;
 }
 
 .menu a:hover {
@@ -371,6 +372,11 @@ footer {
     font-size: 0.8em;
 }
 
+footer p,
+footer span {
+    color: #081b38;
+}
+
 #last-modified {
     margin-top: 10px;
     font-size: 0.9em;
@@ -503,4 +509,8 @@ strong {
     display: flex;
     justify-content: space-around;
     align-items: center;
+}
+
+.aboutContact a {
+    color: #081b38;
 }
